test/conformance/chainsaw/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-one-trigger/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-data-sync-delete-one-trigger
spec:
  background: false
  failurePolicy: Fail
  rules:
  - generate:
      apiVersion: v1
      data:
        data: '{{ request.object.data }}'
      kind: ConfigMap
      name: '{{ request.object.metadata.name }}-replicated'
      namespace: '{{ request.object.metadata.namespace }}'
      synchronize: true
    match:
      all:
      - resources:
          kinds:
          - v1/ConfigMap
          selector:
            matchLabels:
              replicate: "true"
    name: replicate
  validationFailureAction: Enforce
