test/conformance/chainsaw/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-one-trigger/target-1.yaml
---
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: foosource-1-replicated
  namespace: cpol-data-sync-delete-one-trigger-ns
