test/conformance/chainsaw/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-one-trigger/target-others.yaml
---
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: foosource-2-replicated
  namespace: cpol-data-sync-delete-one-trigger-ns
---
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: foosource-3-replicated
  namespace: cpol-data-sync-delete-one-trigger-ns
