test/conformance/chainsaw/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-one-trigger/trigger-others.yaml
---
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: foosource-2
  namespace: cpol-data-sync-delete-one-trigger-ns
  labels:
    replicate: "true"
---
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: foosource-3
  namespace: cpol-data-sync-delete-one-trigger-ns
  labels:
    replicate: "true"
