test/conformance/chainsaw/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-one-trigger/02-check.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: check
spec:
  timeouts: {}
  try:
  - apply:
      file: trigger-1.yaml
  - apply:
      file: trigger-others.yaml
  - assert:
      file: target-1.yaml
  - assert:
      file: target-others.yaml
