test/conformance/chainsaw/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-one-trigger/03-delete.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: delete
spec:
  timeouts: {}
  try:
  - delete:
      apiVersion: v1
      kind: ConfigMap
      name: foosource-1
      namespace: cpol-data-sync-delete-one-trigger-ns
