test/conformance/chainsaw/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-one-trigger/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cpol-data-sync-delete-one-trigger
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-data-sync-delete-one-trigger
  - name: step-02
    try:
    - apply:
        file: trigger-1.yaml
    - apply:
        file: trigger-others.yaml
    - assert:
        file: target-1.yaml
    - assert:
        file: target-others.yaml
  - name: step-03
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: ConfigMap
          name: foosource-1
          namespace: cpol-data-sync-delete-one-trigger-ns
  - name: step-04
    try:
    - sleep:
        duration: 3s
  - name: step-05
    try:
    - error:
        file: target-1.yaml
